@@ -1,3 +1,7 @@
+2016-04-25  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed crashing bug with empty table rows (Bug 361622).
+
 2016-04-16  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed filter comparison with custom dates (Bug 361625).
